# bytekind

./: Cargo.toml  LICENSE.md
src/: lib.rs
src/array/: mod.rs  proptest.rs  serde.rs
src/tests/: mod.rs
src/vec/: mod.rs  proptest.rs  schema.rs  serde.rs
