[package]
name = "bytekind"
version = "0.1.0"
edition = "2021"



[dependencies]
serde = "1"
unarray = "0.1.4"

hex = { version = "0.4", optional = true }

proptest = { git = "https://github.com/proptest-rs/proptest", optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]

default = ["std", "hex", "proptest"]
std = []
