[package]
name = "bytekind"
version = "0.2.0"
edition = "2021"

license = "MIT"
repository = "https://github.com/cameron1024/bytekind"
description = "Containers for byte arrays that are generic over their serialization format"


[dependencies]
serde = "1"
unarray = "0.1.4"

hex = { version = "0.4", optional = true }

proptest = { version = "1.1", optional = true }

schemars = { version = "0.8"}

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
static_assertions = "1"

[features]

default = ["std", "hex"]
std = []
